# CT2STL

./: .gitignore  README.md  args.py  lung_mask.py  main.py  pyproject.toml  slice_viewer.py
src/: main.py  slice_viewer.py
